<resources>
    <string name="app_name">Attendance System</string>
    <string name="register_student">Register Student</string>
    <string name="register_as_faculty">Register as Faculty</string>
    <string name="loading">Loading…\nPlease wait</string>
    <string name="capture_image">Capture Image</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_enrol">Enter your Unique ID</string>
    <string name="register">Register</string>
    <string name="enter_admin_key">Enter Admin Key</string>
    <string name="enter_email">Enter your Email Address</string>
    <string name="next">Next</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="set_pin">Set Pin</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="already_user_login_here">Already user?\nLogin here</string>
    <string name="your_current_location">Your Current location:</string>
    <string name="enr_no">19012021093</string>
    <string name="location">Latitude:  \nLongitude: </string>
    <string name="cur_time">Current date time: 30–6–2022 16:11:00</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_student_s_email_id">Enter student\'s email id</string>
    <string name="enter_student_s_name">Enter student\'s name</string>
    <string name="enter_student_s_enrolment_number">Enter student\'s enrolment number</string>
    <string name="accuracy">Accuracy: </string>
    <string name="in_campus">Outside campus</string>
    <string name="upload_image">Upload Image</string>
    <string name="student_s_list">Student\'s list</string>
    <string name="enrolment_number">Enrolment Number</string>
    <string name="name">Name</string>
    <string name="register_faculty">Register Faculty</string>
    <string name="faculty_list">Faculty List</string>
    <string name="get_data">Get Data</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="register_as_principal">Register as Principal</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_school_id">Enter school id</string>
    <string name="get_attendance_sheet">Get Attendance sheet</string>
    <string name="enter_faculty_email">Enter faculty email</string>
    <string name="enter_faculty_uid">Enter faculty uid</string>
    <string name="enter_faculty_phone_number">Enter faculty phone number</string>
    <string name="enter_faculty_name">Enter faculty name</string>
    <string name="take_entry_attendance">Take entry attendance</string>
    <string name="take_exit_attendance">Take exit attendance</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="start">Start</string>
</resources>