<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="40dp"
            android:visibility="invisible"
            app:cardCornerRadius="20dp"
            app:cardElevation="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/loading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress_bar" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_enr_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/enr_no"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_enr_no"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/ic_round_person_24"
                app:strokeColor="#2D89EF"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/tv_cur_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:letterSpacing="0.12"
                android:text="@string/your_current_location"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:lineSpacingExtra="10dp"
                android:text="@string/location"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cur_location" />

            <TextView
                android:id="@+id/tv_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/accuracy"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_location" />


            <TextView
                android:id="@+id/tv_in_campus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/in_campus"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_accuracy" />


            <TextView
                android:id="@+id/tv_cur_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/cur_time"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_in_campus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_new_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:letterSpacing="0.15"
                android:padding="15dp"
                android:text="@string/register_student"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_cur_time" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_take_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:alpha="0.5"
                android:letterSpacing="0.15"
                android:padding="15dp"
                android:text="@string/take_attendance"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btn_register_new_student" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_student_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:letterSpacing="0.15"
                android:padding="15dp"
                android:text="@string/student_s_list"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btn_take_attendance" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>